# Amazonian

./: CMakeLists.txt  README.md
include/managers/: SceneManager.hpp
include/types/: Component.hpp  Scene.hpp
include/types/objects/: CoreObject.hpp
include/types/objects/resources/: 3DModel.hpp  Image.hpp  Model.hpp
include/utils/: Resources.hpp
src/: main.cpp
src/managers/: SceneManager.cpp
src/types/objects/: CoreObject.cpp
src/types/objects/resources/: Image.cpp  Model.cpp
